@@ -6,10 +6,10 @@ public class Ex6 {
   public static void main(String[] args) {
     Character[] c1 = {'g', 'a', 'c', 'e', 'j'};
     Character[] c2 = {'a', 'e', 'z', 'x', 'g'};
-//    Set<Character> set1 = new HashSet<>(Arrays.asList(c1));
-    Set<Character> set1 = new HashSet<>(Set.of(c1));
-//    Set<Character> set2 = new HashSet<>(Arrays.asList(c2));
-    Set<Character> set2 = new HashSet<>(Set.of(c2));
+//    HashSet<Character> set1 = new HashSet<>(Arrays.asList(c1));
+    HashSet<Character> set1 = new HashSet<>(Set.of(c1));
+//    HashSet<Character> set2 = new HashSet<>(Arrays.asList(c2));
+    HashSet<Character> set2 = new HashSet<>(Set.of(c2));
     set1.addAll(set2);
     System.out.println(set1.toString());
 //    set1 = new HashSet<>(Arrays.asList(c1));
@@ -22,8 +22,8 @@ public class Ex6 {
     System.out.println(set1.toString());
 //    set1 = new HashSet<>(Arrays.asList(c1));
     set1 = new HashSet<>(Set.of(c1));
-//    Set<Character> set3 = new HashSet<>(Arrays.asList(c1));
-    Set<Character> set3 = new HashSet<>(Set.of(c1));
+//    HashSet<Character> set3 = new HashSet<>(Arrays.asList(c1));
+    HashSet<Character> set3 = new HashSet<>(Set.of(c1));
     set1.removeAll(set2);
     set2.removeAll(set3);
     set1.addAll(set2);
